--- a/Deprocrastinator/Base.lproj/Main.storyboard
+++ b/Deprocrastinator/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gMB-Qw-0gU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gMB-Qw-0gU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -43,7 +43,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="qoA-jN-bjS">
                         <nil key="title"/>
-                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="KZN-Gg-ik4"/>
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="KZN-Gg-ik4">
+                            <connections>
+                                <action selector="onEditButtonPressed:" destination="vXZ-lx-hvc" id="IeK-gD-tPs"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="QEL-jE-xbY">
                             <connections>
                                 <action selector="onAddButtonPressed:" destination="vXZ-lx-hvc" id="sNq-eI-Zxa"/>
@@ -51,7 +55,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="editButton" destination="KZN-Gg-ik4" id="Pwq-eU-UHt"/>
                         <outlet property="textField" destination="vS7-5i-NuH" id="z63-WX-2tl"/>
                         <outlet property="toDoListTableView" destination="7XX-Fa-Fim" id="YRM-Os-ElM"/>
                     </connections>
