--- a/Deprocrastinator/Base.lproj/Main.storyboard
+++ b/Deprocrastinator/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gMB-Qw-0gU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gMB-Qw-0gU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -40,6 +40,10 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="obm-OW-hh4" appends="YES" id="xdp-OV-v7x"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="qoA-jN-bjS">
                         <nil key="title"/>
@@ -65,6 +69,11 @@
                         <outlet property="delegate" destination="vXZ-lx-hvc" id="TLb-lQ-yWw"/>
                     </connections>
                 </tapGestureRecognizer>
+                <swipeGestureRecognizer direction="right" id="obm-OW-hh4">
+                    <connections>
+                        <outlet property="delegate" destination="vXZ-lx-hvc" id="AjA-5M-MD2"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="637" y="366"/>
         </scene>
